Move repository to Spring JPA